gobmkida/c1/gtp_top_moves
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gtp_top_moves/src/interface/play_gtp.c:2706:34: error: use of undeclared identifier 'dword_9AC3A8'
*( _QWORD *)&v2 = ( unsigned int)dword_9AC3A8[v1]; 
                                 ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gtp_top_moves/src/interface/play_gtp.c:2709:19: error: use of undeclared identifier 'dword_9AC3D8'
gtp_print_vertex( dword_9AC3D8[v1] / 20 - 1, dword_9AC3D8[v1] + ~( 20 * ( dword_9AC3D8[v1] / 20))); 
                  ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gtp_top_moves/src/interface/play_gtp.c:2709:75: error: use of undeclared identifier 'dword_9AC3D8'
gtp_print_vertex( dword_9AC3D8[v1] / 20 - 1, dword_9AC3D8[v1] + ~( 20 * ( dword_9AC3D8[v1] / 20))); 
                                                                          ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gtp_top_moves/src/interface/play_gtp.c:2709:46: error: use of undeclared identifier 'dword_9AC3D8'
gtp_print_vertex( dword_9AC3D8[v1] / 20 - 1, dword_9AC3D8[v1] + ~( 20 * ( dword_9AC3D8[v1] / 20))); 
                                             ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gtp_top_moves/src/interface/play_gtp.c:2710:18: error: use of undeclared identifier 'dword_9AC3A8'
v2 = *( float *)&dword_9AC3A8[v1]; 
                 ^
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gtp_top_moves/src/obj/2/play_gtp.o] Error 1
